libs/@local/hashql/hir/tests/ui/lower/inference/ctor-bounded-invalid.jsonc
//@ run: fail
//@ description: Checks that type constructor bounded generic parameter (T: Number) violation is caught during type inference.
["newtype", "Person<T: Number>", "T", ["Person", { "#literal": "2" }]]
//~^ ERROR Type variable has incompatible upper and lower bounds
